--- a/index.html
+++ b/index.html
@@ -105,6 +105,24 @@
               to face washes to provide additional benefits or brighten the
               skin. Common other ingredients include glycerine, hyaluronic acid,
               salicylic acid, and vitamin C.
+              <br />
+              <div class="flex">
+                <img
+                  src="face wash salicylic acid.png"
+                  alt="salicylic acid structure"
+                  class="h-96 mb-4 rounded-lg shadow-md m-auto"
+                />
+                &nbsp;&nbsp;
+                <img
+                  src="face wash ascorbic acid.png"
+                  alt="salicylic acid structure"
+                  class="h-96 mb-4 rounded-lg shadow-md m-auto"
+                />
+              </div>
+              <div class="flex">
+                <p class="flex-1 text-center">Salicylic Acid</p>
+                <p class="flex-1 text-center">Ascorbic Acid</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -264,6 +282,18 @@
               appearance.
             </li>
           </ul>
+          <div class="flex">
+            <img src="serum retinol.png" alt="" class="m-auto shadow-md" />
+            &nbsp;&nbsp;<img
+              src="niacinamide serum.png"
+              alt=""
+              class="m-auto shadow-md"
+            />
+          </div>
+          <div class="flex">
+            <p class="flex-1 text-center">Retinol</p>
+            <p class="flex-1 text-center">Niacinamide</p>
+          </div>
         </div>
 
         <!-- Properties of Various Chemicals Section -->
@@ -399,6 +429,8 @@
               your lips.
             </li>
           </ul>
+          <img src="vitamine E lipstick.png" alt="" class="m-auto" />
+          <p class="text-center">Vitamin E</p>
         </div>
 
         <!-- Properties of Various Chemicals Section -->
@@ -528,6 +560,12 @@
               properties.
             </li>
           </ul>
+          <img
+            src="Hyaluronic acid sunscreen.png"
+            alt=""
+            class="m-auto shadow-md"
+          />
+          <p class="text-center">Hyaluronic Acid</p>
         </div>
 
         <!-- Properties of Various Chemicals Section -->
@@ -660,6 +698,12 @@
               scent.
             </li>
           </ul>
+          <img
+            src="Terpenes body spray.webp"
+            alt=""
+            class="h-80 w-auto m-auto shadow-md"
+          />
+          <p class="w-full text-center">Terpenes</p>
         </div>
 
         <!-- Esters Section -->
