Add more  images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="bg-blue-100 py-10 text-center">
       <div class="container mx-auto flex flex-col items-center">
         <h2 class="text-4xl font-semibold mb-4">
-          Understand the Chemistry Behind Your Cosmetics
+          Demystifying the Chemistry of Cosmetics
         </h2>
         <p class="text-lg text-gray-700">
           Discover the ingredients, benefits, and risks of everyday cosmetic
@@ -288,11 +288,16 @@
               src="niacinamide serum.png"
               alt=""
               class="m-auto shadow-md"
+            />&nbsp;&nbsp;<img
+              src="Phthalates serum.webp"
+              alt=""
+              class="h-80 shadow-md"
             />
           </div>
           <div class="flex">
             <p class="flex-1 text-center">Retinol</p>
             <p class="flex-1 text-center">Niacinamide</p>
+            <p class="flex-1 text-center">Phthalates</p>
           </div>
         </div>
 
@@ -560,12 +565,22 @@
               properties.
             </li>
           </ul>
-          <img
-            src="Hyaluronic acid sunscreen.png"
-            alt=""
-            class="m-auto shadow-md"
-          />
-          <p class="text-center">Hyaluronic Acid</p>
+          <div class="flex">
+            <img
+              src="Hyaluronic acid sunscreen.png"
+              alt=""
+              class="m-auto shadow-md"
+            />&nbsp;&nbsp;
+            <img
+              src="Oxybenzone sunscreen.png"
+              alt=""
+              class="m-auto shadow-md"
+            />
+          </div>
+          <div class="flex">
+            <p class="flex-1 text-center">Hyaluronic Acid</p>
+            <p class="flex-1 text-center">Oxybenzone Acid</p>
+          </div>
         </div>
 
         <!-- Properties of Various Chemicals Section -->
@@ -698,12 +713,23 @@
               scent.
             </li>
           </ul>
-          <img
-            src="Terpenes body spray.webp"
-            alt=""
-            class="h-80 w-auto m-auto shadow-md"
-          />
-          <p class="w-full text-center">Terpenes</p>
+          <div class="flex">
+            <img
+              src="Terpenes body spray.webp"
+              alt=""
+              class="h-80 w-auto m-auto shadow-md"
+            />
+            &nbsp;&nbsp;
+            <img
+              src="Isopropyl alcohol body spray.png"
+              alt=""
+              class="m-auto shadow-md"
+            />
+          </div>
+          <div class="flex">
+            <p class="w-full text-center">Terpenes</p>
+            <p class="w-full text-center">Isopropyl Alcohol</p>
+          </div>
         </div>
 
         <!-- Esters Section -->
